welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: ';' expected but '.' found.
  if (Math.abs(n-100)<=10) || Math.abs(n-200)<=200){return true}
                                  ^